# BACK_END_DJANGO_2023

./: .gitmodules  README.md  login_userinfo.html  post_comment.html  게시물1.html  과제#2.html
[과제 #3] 게시판 모델 만들기/: .gitignore  db.sqlite3  pyproject.toml
[과제 #3] 게시판 모델 만들기/config/: settings.py  urls.py
[과제 #3] 게시판 모델 만들기/mysite/comment/: models.py
[과제 #3] 게시판 모델 만들기/mysite/mysite/: settings.py
[과제 #3] 게시판 모델 만들기/mysite/post/: models.py
[과제 #3] 게시판 모델 만들기/mysite/reply/: apps.py  models.py
[과제 #3] 게시판 모델 만들기/mysite/user/: models.py
[과제 #3] 게시판 모델 만들기/posts/migrations/: 0003_rename_author_comment_writer_and_more.py
[과제 #3] 게시판 모델 만들기/users/: models.py
[과제 #3] 게시판 모델 만들기/users/migrations/: 0001_initial.py  0002_remove_user_is_active_user_username_and_more.py
[과제 #4] fbv를 사용한 view 와 template 연결/: pyproject.toml
[과제 #4] fbv를 사용한 view 와 template 연결/config/: urls.py
[과제 #4] fbv를 사용한 view 와 template 연결/demo/demo/: settings.py
[과제 #4] fbv를 사용한 view 와 template 연결/mysite/: db.sqlite3.sample
[과제 #4] fbv를 사용한 view 와 template 연결/mysite/mysite/: urls.py
[과제 #4] fbv를 사용한 view 와 template 연결/mysite/post/: models.py  views.py
[과제 #4] fbv를 사용한 view 와 template 연결/mysite/reply/: models.py
[과제 #4] fbv를 사용한 view 와 template 연결/posts/: urls.py  views.py
[과제 #4] fbv를 사용한 view 와 template 연결/posts/Templates/: home.html  post1.html  post2.html
[과제 #4] fbv를 사용한 view 와 template 연결/posts/migrations/: 0001_initial.py  (+1 more)
[과제 #4] fbv를 사용한 view 와 template 연결/users/: urls.py  views.py
[세미나 #4] Django/: pyproject.toml
[세미나 #4] Django/mysite/comment/: models.py
(+219 files in other folders)
